noinst_LIBRARIES = libass_aegisub.a

AM_CPPFLAGS = @FREETYPE_CFLAGS@ -DHAVE_FONTCONFIG -DUSE_ICONV @FONTCONFIG_CFLAGS@

libass_aegisub_a_SOURCES = \
	ass.c \
	ass_bitmap.c \
	ass_cache.c \
	ass_font.c \
	ass_fontconfig.c \
	ass_library.c \
	ass_render.c \
	ass_utils.c \
	mputils.c \
	ass.h \
	ass_bitmap.h \
	ass_cache.h \
	ass_font.h \
	ass_fontconfig.h \
	ass_library.h \
	ass_types.h \
	ass_utils.h \
	help_mp.h \
	libass_msvc.patch \
	mputils.h \
	msvc.h
