i18n = import('i18n')
langs = [
    'ar',
    'bg',
    'ca',
    'cs',
    'da',
    'de',
    'el',
    'es',
    'eu',
    'fa',
    'fi',
    'fr_FR',
    'gl',
    'hu',
    'id',
    'it',
    'ja',
    'ko',
    'nl',
    'pl',
    'pt_BR',
    'pt_PT',
    'ru',
    'sr_RS@latin',
    'sr_RS',
    'uk_UA',
    'vi',
    'zh_CN',
    'zh_TW',
]

i18n.gettext('aegisub', languages : langs)
