noinst_LIBRARIES = libuniversalchardet.a

AM_CPPFLAGS = -D_X86_

libuniversalchardet_a_SOURCES = \
	CharDistribution.cpp \
	JpCntx.cpp \
	LangBulgarianModel.cpp \
	LangCyrillicModel.cpp \
	LangGreekModel.cpp \
	LangHebrewModel.cpp \
	LangHungarianModel.cpp \
	LangThaiModel.cpp \
	nsBig5Prober.cpp \
	nsCharSetProber.cpp \
	nsEUCJPProber.cpp \
	nsEUCKRProber.cpp \
	nsEUCTWProber.cpp \
	nsEscCharsetProber.cpp \
	nsEscSM.cpp \
	nsGB2312Prober.cpp \
	nsHebrewProber.cpp \
	nsLatin1Prober.cpp \
	nsMBCSGroupProber.cpp \
	nsMBCSSM.cpp \
	nsSBCSGroupProber.cpp \
	nsSBCharSetProber.cpp \
	nsSJISProber.cpp \
	nsUTF8Prober.cpp \
	nsUniversalDetector.cpp

libuniversalchardet_a_SOURCES += \
	CharDistribution.h \
	JpCntx.h \
	nsBig5Prober.h \
	nsCharSetProber.h \
	nsCodingStateMachine.h \
	nsEUCJPProber.h \
	nsEUCKRProber.h \
	nsEUCTWProber.h \
	nsError.h \
	nsEscCharsetProber.h \
	nsGB2312Prober.h \
	nsHebrewProber.h \
	nsLatin1Prober.h \
	nsMBCSGroupProber.h \
	nsPkgInt.h \
	nsSBCSGroupProber.h \
	nsSBCharSetProber.h \
	nsSJISProber.h \
	nsUTF8Prober.h \
	nsUniversalDetector.h \
	nscore.h \
	prcpucfg.h \
	prmem.h \
	protypes.h \
	prtypes.h \
	xpcom-config.h
